parser/src/snapshots/json_parser__token__tests__tokenize_invalid_number.snap
---
source: json_parser/src/token.rs
expression: "&lexer.collect::<Vec<_>>()"
---
[
    Token {
        kind: LBrace,
        origin: "{",
        start_column: 1,
    },
    Token {
        kind: String,
        origin: "number",
        start_column: 2,
    },
    Token {
        kind: Colon,
        origin: ":",
        start_column: 10,
    },
    Token {
        kind: Illegal(
            Some(
                Number(
                    MinusMissingDigit,
                ),
            ),
        ),
        origin: "-",
        start_column: 12,
    },
    Token {
        kind: RBrace,
        origin: "}",
        start_column: 13,
    },
    Token {
        kind: Eof,
        origin: "",
        start_column: 14,
    },
]
